<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/d_round_corner_white_bkg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/newColorBackground"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp">

        <ImageView
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_exclamation_mark" />

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied"
            android:textColor="@color/newColorBlack"
            android:textSize="@dimen/heading_text_order_history" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_sub"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_step_1"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_step_2"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_denied_step_3"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/location_heading_sub"
            android:textColor="@color/text_color_gray"
            android:textSize="@dimen/menu_button_start" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/ractengle_less_round_solid_primary"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/allow"
                android:textColor="@color/newColorWhite" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/ractengle_less_round_solid_primary"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/cancel"
                android:textColor="@color/newColorWhite" />

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>