<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/newColorWhite">


    <RelativeLayout
        android:id="@+id/ic_back_btn"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/toolbar">


        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/arrow_left"
            android:padding="@dimen/back_button_padding"
            app:srcCompat="@drawable/ic_cross_white"
            app:tint="@color/newColorBlack" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/enable_location_txt">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                app:srcCompat="@drawable/ic_location" />

        </RelativeLayout>

        <TextView
            android:id="@+id/enable_location_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/enable_location"
            android:textColor="@color/black"
            android:textSize="@dimen/text_order_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enable_location_txt"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="6dp"
                android:paddingTop="10dp"
                android:text="@string/you_ll_need_to_enable_your_location_n_in_order_to_use_binder"
                android:textColor="@color/text_color_gray"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/enable_location_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/allow_location"
                android:textColor="@color/App_color"
                android:textSize="@dimen/text_order_size" />


        </LinearLayout>


    </RelativeLayout>
</FrameLayout>
